2007-02-14  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/PSDrawDoc.py: remove draw_wedge from BaseDoc
	* src/ReportBase/_ReportUtils.py: remove draw_wedge from BaseDoc
	* src/plugins/FanChart.py: remove draw_wedge from BaseDoc
	* src/BaseDoc.py: remove draw_wedge from BaseDoc

2007-02-14  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/HtmlDoc.py: fix html template loading.
	* src/ReportBase/_ReportDialog.py: fix html template loading.

2007-02-14  Douglas Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/_ReportUtils.py: 0000922: Slight change to estimate_age, 
	  and an additional function

2007-02-14  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: gedcom refactoring

2007-02-13  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: gedcom refactoring

2007-02-13  Brian Matherly  <brian@gramps-project.org>
	* src/ViewManager.py: fix crash during backup on windows

2007-02-13  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsGEDDB.py: gedcom refactoring
	* src/GrampsDbUtils/_GedcomParse.py: gedcom refactoring
	* src/GrampsDbUtils/_ReadGedcom.py: gedcom refactoring
	* src/GrampsDbUtils/_GedcomLex.py: gedcom refactoring
	* src/GrampsDbUtils/_GrampsDbWRFactories.py: gedcom refactoring
	* src/GrampsDbUtils/_GedcomUtils.py: added
	* src/GrampsDbUtils/Makefile.am: added _GedcomUtils.py

2007-02-13  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsWidgets.py: Merge trunk changes r7950:8105
	* src/MarkupText.py: cleanup

2007-02-12  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: cleanup

2007-02-12  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/AncestorChart2.py: Fix title color
	* src/plugins/DescendChart.py: Fix title color
	* src/plugins/TimeLine.py: Fix title color
	* src/docgen/PSDrawDoc.py: Fix center_text and draw_bar

2007-02-12  Don Allingham  <don@gramps-project.org>
	* src/plugins/FindDupes.py: backport from 2.2.6
