@@ -1,3 +1,7 @@
+2007-02-15  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDbUtils/_GedcomParse.py: refactoring
+	* src/GrampsDbUtils/_GedcomUtils.py: refactoring
+
 2007-02-14  Brian Matherly  <brian@gramps-project.org>
 	* src/docgen/PSDrawDoc.py: remove draw_wedge from BaseDoc
 	* src/ReportBase/_ReportUtils.py: remove draw_wedge from BaseDoc
